Actions
Bug #11172
closedsmbsrv: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:
Description
NULL pointer errors:
../common/smbns_dyndns.c: In function 'dyndns_search_entry': ../common/smbns_dyndns.c:1698:11: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../common/smbns_dyndns.c:1732:11: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ ../common/smb_lgrp.c: In function 'smb_lgrp_gtbl_exists': ../common/smb_lgrp.c:1407:10: error: incompatible types when returning type 'void *' but 'boolean_t {aka enum <anonymous>}' was expected return (NULL); ^ ../common/smb_lgrp.c: In function 'smb_lgrp_pgrp_valid_gname': ../common/smb_lgrp.c:2531:19: error: comparison between pointer and integer [-Werror] for (c = *ptr; c != NULL; ptr++, c = *ptr) { ^~ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 4fcce4872b9846a3c40d70c0de66142c56585c73
commit 4fcce4872b9846a3c40d70c0de66142c56585c73 Author: Toomas Soome <tsoome@me.com> Date: 2019-08-01T13:56:18.000Z 11172 smbsrv: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Gordon Ross <gwr@nexenta.com>
Actions