11172 smbsrv: NULL pointer errors Reviewed by: John Levon <john.levon@joyent.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Approved by: Gordon Ross <gwr@nexenta.com>